# mRNA-PLUM

./: .gitignore  FULL_REPO_DUMP.txt  KEYS.xlsx  KURS4  README.md  config.example.yaml  config.yaml  dump_repo.py  mrna-plum.spec  pyproject.toml  test_exp.py  test_exp2.py  test_fetch.py  test_ind.py  test_worker.py  test_write.py
_data/parquet/: events_canonical.parquet
_out/: Raport_Zbiorczy_NA__.xlsx
_out/_out/: Raport_Zbiorczy_NA__.xlsx
_out/_run/: progress.jsonl
_run/: compute-stats.ok  progress.jsonl
src/: repo_dump.py
src/mrna_plum/: __main__.py  cfg_helpers.py  cli.py  config.py  errors.py  init_project.py  logging_run.py  paths.py
src/mrna_plum.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/mrna_plum/activities/: activities_state.py  snapshots_load.py
src/mrna_plum/import/: import_roster.py
src/mrna_plum/inputs/: autodetect.py
src/mrna_plum/io/: csv_read.py  excel_keys.py
src/mrna_plum/merge/: __init__.py  merge_logs.py  test_merge_logs.py
src/mrna_plum/parse/: __init__.py  context.py  parse_events.py  parse_logs.py
src/mrna_plum/reports/: __init__.py  export_excel.py  export_individual.py
src/mrna_plum/rules/: activity_rules.py  engine.py  models.py
src/rna_plum.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
vba/export_txt/: mRNA-PLUM_VBA_20260226_142220.txt
vba/forms/: raporty_plum.vb
vba/modules/: Autostart.vb  Autozamykanie.vb  Class1.vb  modExportVBA.vb  modMergeCsvEmail.vb  modNA_Convert.vb  modNA_Launcher.vb  modNA_PdfEngine.vb  modNA_UIInputs.vb  modPdfEngine.vb
(+11 files in other folders)
